# hyprland-plugins

./: .gitignore  README.md
clock/: CMakeLists.txt  ClockOverlay.cpp  ClockOverlay.hpp  ClockPassElement.cpp  ClockPassElement.hpp  main.cpp
fakefocus/: CMakeLists.txt  main.cpp
